--- a/assets/css/Field Trip.css
+++ b/assets/css/Field Trip.css
@@ -137,3 +137,34 @@ body{
   max-width: 700px;
   margin: 0 auto 25px;
 }
+
+#loaderImg{
+  width: 15%;
+  height: auto;
+  
+}
+
+.loader{
+  margin: 0;
+  padding: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #0d335d;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.disappear{
+  animation: vanish 1s forwards;
+}
+
+@keyframes vanish {
+  100%{
+    opacity: 0;
+    visibility: hidden;
+  }
+}
